# langchaing-rag-lab

./: .gitignore  README.md  pyproject.toml
assets/: query_template.txt
data/: api_development_standards.md  development_policies.md  multi_theme_descriptions.md  software_architecture_guide.md  troubleshooting_guide.md
output_chuncks/semantic_based/: chunk_1.json  chunk_10.json  chunk_11.json  chunk_12.json  chunk_13.json  chunk_14.json  chunk_15.json  chunk_16.json  chunk_17.json  chunk_18.json  chunk_19.json  chunk_2.json  chunk_20.json  chunk_21.json  chunk_22.json  chunk_23.json  chunk_24.json  chunk_25.json  chunk_26.json  chunk_27.json  chunk_28.json  chunk_29.json  chunk_3.json  chunk_30.json  chunk_31.json  chunk_32.json  chunk_33.json  chunk_34.json  chunk_35.json  chunk_36.json  chunk_37.json  chunk_38.json  chunk_39.json  chunk_4.json  chunk_40.json  chunk_41.json  chunk_42.json  chunk_43.json  chunk_44.json  chunk_45.json  (+56 more)
src/application/ports/: chunk_store.py  document_loader.py
src/application/use_cases/: chunking_use_case.py  storage_use_case.py  talk_use_case.py
src/domain/models/: chunk.py  cli_config_classes.py  document.py  enums.py
src/domain/services/: chunking_service.py
src/domain/strategies/: chunking_strategy.py  length_based_chunking.py  semantic_chunking.py  structure_based_chunking.py
src/infrastructure/cli/: main.py
tests/: test_chunking.py
tests/application/ports/: test_chunk_store.py  test_document_loader.py
tests/application/use_cases/: test_chunking_use_case.py
tests/domain/: test_models.py
(+13 files in other folders)
